# Research-Ai-Agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
research_assistant/: __init__.py  agent.py  runner.py
research_assistant/agents/: __init__.py  analyst.py  researcher.py  scraper_agent.py  writer.py
research_assistant/tools/: __init__.py  file_tool.py  scraper_tool.py  search_tool.py
